# transistor

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: feature_request.md  question.md
.github/workflows/: rust.yml
benches/: entity.rs  query.rs  tx_log.rs
examples/: async_deal_with_error_entity.rs  async_entity_history_timed.rs  async_entity_timed.rs  async_entity_tx_timed.rs  async_query.rs  async_tx_log.rs  async_tx_logs.rs  complex_query.rs  deal_with_errors_entity_tx.rs  document_by_id.rs  documents.rs  entity.rs  entity_history.rs  entity_tx.rs  evict.rs  limit_offset_query.rs  match_continue_tx.rs  match_no_continue_tx.rs  query_error.rs  simple_query.rs  state.rs  tx_log.rs  tx_logs.rs
src/: client.rs  docker.rs  http.rs  lib.rs  main.rs  types.rs
src/docker/: mod.rs
src/http/: mod.rs  types.rs
src/types/: error.rs  http.rs  mod.rs  query.rs  response.rs
tests/: lib.rs
