[package]
name = "transistor"
version = "1.3.6"
authors = ["Julia Naomi <jnboeira@outlook.com>", "Otavio Pace <otaviopp8@gmail.com>"]
description = "Crux Datalog DB Client"
readme = "README.md"
documentation = "https://docs.rs/transistor/"
repository = "https://github.com/naomijub/transistor"
keywords = ["CRUX", "Client", "EDN", "Database", "Datalog"]
license = "LGPL-3.0"
edition = "2018"

[features]
mock = ["mockito"]
time_as_str = []
async = ["tokio", "futures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["blocking"] }
edn-rs = { version = "0.13.4", features = ["async"] }
mockito = {version = "0.26", optional = true }
chrono = "0.4"
futures = {version = "0.3.5", optional = true }
tokio = {version = "0.2.22", optional = true, features = ["macros"] }


[dev-dependencies]
mockito = "0.26"

[[example]]
name = "async_tx_log"
required-features = ["async"]

[[example]]
name = "async_tx_logs"
required-features = ["async"]

[[example]]
name = "async_entity_timed"
required-features = ["async"]

[[example]]
name = "async_entity_tx_timed"
required-features = ["async"]

[[example]]
name = "async_entity_history_timed"
required-features = ["async"]

[[example]]
name = "async_query"
required-features = ["async"]
